--- a/Dialog.yml
+++ b/Dialog.yml
@@ -5,4 +5,6 @@
   tasks:
 
   - name: Start Script
-    command: /home/terminal/Dialog.sh
+    ansible.builtin.shell:
+    args:
+        executable: /home/terminal/Dialog.sh
