--- a/Dialog.yml
+++ b/Dialog.yml
@@ -5,4 +5,6 @@
   tasks:
 
   - name: Start Script
-          command: sh /home/terminal/Dialog.sh
+    ansible.builtin.shell:
+    args:
+      cmd: /home/terminal/Dialog.sh
