--- a/Dialog.yml
+++ b/Dialog.yml
@@ -3,8 +3,9 @@
 - hosts: all
   become: true
   tasks:
-
-  - name: Start Script
-    ansible.builtin.shell:
-    args:
-      cmd: /home/terminal/Dialog.sh
+  
+- name: Start terminal on remote machine
+  shell:
+  args:
+    cmd: DISPLAY=:0 nohup gnome-terminal </dev/null >/dev/null 2>&1 &
+    executable: /bin/bash
