--- a/Dialog.yml
+++ b/Dialog.yml
@@ -5,7 +5,7 @@
   tasks:
   
 - name: Start terminal on remote machine
-  shell:
+  ansible.builtin.shell:
   args:
-    cmd: DISPLAY=:0 nohup gnome-terminal </dev/null >/dev/null 2>&1 &
+    cmd: DISPLAY=:0 nohup lxterminal </dev/null >/dev/null 2>&1 &
     executable: /bin/bash
