--- a/Dialog.yml
+++ b/Dialog.yml
@@ -7,6 +7,6 @@
   - name: Execute Script
     ansible.builtin.shell:
     args:
-      command: chdir=/home/terminal/Dialog.sh
+      chdir: /home/terminal/Dialog.sh
       executable: Dialog.sh
   
