--- a/Dialog.yml
+++ b/Dialog.yml
@@ -4,5 +4,8 @@
   become: true
   tasks:
 
-  - name: Execute Script
-    ansible.builtin.shell: /home/terminal/Dialog.sh
+- name: Start terminal on remote machine
+  ansible.builtin.shell:
+  args:
+    cmd: DISPLAY=:0 nohup gnome-terminal -e "bash -c 'whoami'" </dev/null >/dev/null 2>&1 &
+    executable: /bin/bash
