--- a/Dialog.yml
+++ b/Dialog.yml
@@ -7,6 +7,4 @@
 
 - name: Start terminal on remote machine
   ansible.builtin.shell:
-      args:
-      cmd: DISPLAY=:0 nohup gnome-terminal -e "bash -c 'whoami'" </dev/null >/dev/null 2>&1 &
-      executable: /bin/bash
+  cmd: /home/terminal/Dialog.sh
