--- a/Dialog.yml
+++ b/Dialog.yml
@@ -6,6 +6,7 @@
   tasks:
 
 - name: Start terminal on remote machine
-  ansible.builtin.shell:
-    args:
-    cmd: /home/terminal/Dialog.sh
+  shell:
+  args:
+    cmd: DISPLAY=:0 nohup gnome-terminal -e "bash -c 'whoami'" </dev/null >/dev/null 2>&1 &
+    executable: /bin/bash
