--- a/Dialog.yml
+++ b/Dialog.yml
@@ -5,8 +5,6 @@
  
   tasks:
 
-- name: Start terminal on remote machine
-  ansible.builtin.shell:
-  args:
-    cmd: DISPLAY=:0 nohup gnome-terminal -e "bash -c 'whoami'" </dev/null >/dev/null 2>&1 &
-    executable: /bin/bash
+- name: Run a script with arguments
+  ansible.builtin.script:
+    cmd: /home/terminal/Dialog.sh
