--- a/Dialog.yml
+++ b/Dialog.yml
@@ -1,10 +1,10 @@
 ---
-
-- hosts: all
+- name: Transfer and execute a script.
+  hosts: all
   become: true
- 
   tasks:
+     - name: Transfer the script
+       copy: src=Dialog.sh dest=/home/polyrack mode=0777
 
-- name: Run a script with arguments
-    ansible.builtin.script:
-    cmd: /home/terminal/Dialog.sh
+     - name: Execute the script
+       command: sh /home/test_user/Dialog.sh
