--- a/Dialog.yml
+++ b/Dialog.yml
@@ -4,7 +4,7 @@
   become: true
   tasks:
      - name: Transfer the script
-       copy: src=/home/polyrack/Dialog.sh dest=/home/polyrack mode=0777
+       copy: src=Dialog.sh dest=/home/polyrack mode=0777
 
      - name: Execute the script
        command: sh /home/terminal/Dialog.sh
