--- a/Dialog.yml
+++ b/Dialog.yml
@@ -4,4 +4,4 @@
   become: true
   tasks:
      - name: Execute the script
-       command: bash /home/terminal/Dialog.sh
+       command: sh /home/terminal/Dialog.sh
