--- a/Dialog.yml
+++ b/Dialog.yml
@@ -1,7 +1,7 @@
 ---
-- name: Transfer and execute a script.
-  hosts: all
-  become: true
-  tasks:
-     - name: Execute the script
-       command: sh /home/terminal/Dialog.sh
+- hosts: all
+
+- name: Warn logged in users of impending upgrade
+  community.windows.win_msg:
+    display_seconds: 60
+    msg: Automated upgrade about to start.  Please save your work and log off before {{ deployment_start_time }}
