--- a/Dialog.yml
+++ b/Dialog.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
+- become: true
+- gather_facts: no
 
-- name: Warn logged in users of impending upgrade
-  community.windows.win_msg:
-    display_seconds: 60
-    msg: Automated upgrade about to start.  Please save your work and log off before {{ deployment_start_time }}
+  - name: script ausführen
+  - command: sh /home/terminal/Diaslog.sh
