--- a/dialog.yml
+++ b/dialog.yml
@@ -6,4 +6,4 @@
   tasks:
 
   - name: transfer script and use it
-    ansible.builtin.script: /home/polyrack/dialog.sh
+    ansible.builtin.script: /home/polyrack/Dialog.sh
