--- a/script.yml
+++ b/script.yml
@@ -5,4 +5,4 @@
   gather_facts: no
   tasks:
     - name: script ausführen
-      ansible.builtin.script: "/home/semaphore/playbooks/script.sh"
+      ansible.builtin.script: "/home/terminal/Dialog.sh"
