--- a/script.yml
+++ b/script.yml
@@ -4,5 +4,7 @@
   become: true
   gather_facts: no
   tasks:
+    - name: Environment Variable
+      ansible.builtin.shell: "export DISPLAY=:0"
     - name: script ausführen
       ansible.builtin.shell: "/home/terminal/Dialog.sh"
